# QT_QML

./: README.md
Abstract_list_view_model/: CMakeLists.txt  ContactModel.h  main.cpp
Abstractlistview/: CMakeLists.txt  Phonebook.cpp  Phonebook.h  ShowList.qml  contactmodel.cpp  contactmodel.h  main.cpp  main.qml
Button_component1/: CMakeLists.txt  MyButton.qml  main.cpp  main.qml
Contact_Display_Apllication/: AddContactPage.qml  CMakeLists.txt  CallHistory.cpp  CallHistory.h  CallHistory.qml  Contact.cpp  Contact.h  ContactDataModel.cpp  ContactDataModel.h  HomePage.qml  PhoneBook.cpp  PhoneBookList.qml  WhatsApp.cpp  WhatsApp.h  WhatsAppList.qml  main.cpp
Gallery/: Gallery.pro  REsources.qrc  main.cpp  main.qml
Gallery_Application/: Gallery_Application.pro  ImageTile.qml  Resources.qrc  main.cpp  main.qml
ICONS_TASK/: CMakeLists.txt  main.cpp  main.qml
Loader_task/: A.qml  CMakeLists.txt  main.cpp  main.qml
Model_delegate/: CMakeLists.txt  main.cpp  main.qml
PhoneBook_Project/: CMakeLists.txt  Contact.cpp  Contact.h  Contacts.qml  HomePage.qml  PhoneBook.cpp  PhoneBook.h  PhoneBookPage.qml  main.cpp  main.qml
PhoneBook_Project_with_files/: AddContactPage.qml  CMakeLists.txt  CallHistory.cpp  CallHistory.h  CallHistoryPage.qml  ContactCall.qml  ContactDataModel.cpp  ContactDataModel.h  ContactModelManager.cpp  ContactModelManager.h  Contactcallpage.qml  CsvLoader.cpp  CsvLoader.h  HomePage.qml  PhoneBook.h  PhoneBookPage.qml  WhatsAppList.qml  main.cpp  test.qrc
Project1/: AddContactPage.qml  CMakeLists.txt  CallHistory.cpp  CallHistory.h  CallHistoryPage.qml  Contact.cpp  Contact.h  ContactDataModel.cpp  ContactDataModel.h  ContactModelManager.cpp  ContactModelManager.h  HomePage.qml  PhoneBook.cpp  PhoneBook.h  PhoneBookPage.qml  WhatsApp.cpp  WhatsApp.h  WhatsAppList.qml  main.cpp  main.qml
QML_TASK/: CMakeLists.txt  main.cpp  main.qml
QT_TASK/: CMakeLists.txt  main.cpp
Student_login/: CMakeLists.txt  StudentManager.cpp  StudentManager.h  main.cpp  student.cpp  student.h
Student_login1/: CMakeLists.txt  Student.cpp  Student.h  StudentDataModel.cpp  StudentDataModel.h  main.cpp  main.qml
calculator_project/: Backendoperations.cpp  Backendoperations.h  CMakeLists.txt  main.cpp  main.qml
login/: CMakeLists.txt  HomePage.qml  RegisterPage.qml  Student.cpp  StudentManager.cpp  StudentManager.h  StudentShowModel.qml  main.cpp  main.qml
login_frontend/: CMakeLists.txt  LoginPage.qml
login_updated_code/: CMakeLists.txt  HomePage.qml  Student.cpp  Student.h  Studentdetails.cpp  Studentdetails.h  main.cpp  main.qml  studentviewmodel.cpp  studentviewmodel.h
phone_book_project/: CMakeLists.txt  Phonebookbackend.cpp  Phonebookbackend.h  addcontactpage.qml  contactlistpage.qml  main.cpp  main.qml  phonebookpage.qml  searchcontactpage.qml
qml1/: main.qml
v/: CMakeLists.txt  main.cpp
